--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 {
-  type: "service_account",
-  project_id: "project-lampros",
-  private_key_id: "9855d7a2c61e9fb8617aa705d03f310dedf0810c",
-  private_key: "-----BEGIN PRIVATE KEY-----\nMIIEvAIBADANBgkqhkiG9w0BAQEFAASCBKYwggSiAgEAAoIBAQC2CB3GWx7xAums\nlWxVZiYA4u6PL99zFSpQ1pUZWmJOlws/EDVbvolNyDVkUT1TNmUCjeB0BpWNzsuw\njONNUFJtDPXn9xBNF63sCajYNBNSjSZDMSW2YzDzRP4CgxdjZ9BKo7cFbtxHl/Bl\n...rest of your key data...\n-----END PRIVATE KEY-----",
-  client_email: "firebase-adminsdk-imvdg@project-lampros.iam.gserviceaccount.com",
-  client_id: "106604485181308010896",
-  auth_uri: "https://accounts.google.com/o/oauth2/auth",
-  token_uri: "https://oauth2.googleapis.com/token",
-  auth_provider_x509_cert_url: "https://www.googleapis.com/oauth2/v1/certs",
-  client_x509_cert_url: "https://www.googleapis.com/robot/v1/metadata/x509/firebase-adminsdk-imvdg%40project-lampros.iam.gserviceaccount.com",
-  universe_domain: "googleapis.com"
+  "type": "service_account",
+  "project_id": "project-lampros",
+  "private_key_id": "9855d7a2c61e9fb8617aa705d03f310dedf0810c",
+  "private_key": "-----BEGIN PRIVATE KEY-----\nMIIEvAIBADANBgkqhkiG9w0BAQEFAASCBKYwggSiAgEAAoIBAQC2CB3GWx7xAums\nlWxVZiYA4u6PL99zFSpQ1pUZWmJOlws/EDVbvolNyDVkUT1TNmUCjeB0BpWNzsuw\njONNUFJtDPXn9xBNF63sCajYNBNSjSZDMSW2YzDzRP4CgxdjZ9BKo7cFbtxHl/Bl\n...rest of your key data...\n-----END PRIVATE KEY-----",
+  "client_email": "firebase-adminsdk-imvdg@project-lampros.iam.gserviceaccount.com",
+  "client_id": "106604485181308010896",
+  "auth_uri": "https://accounts.google.com/o/oauth2/auth",
+  "token_uri": "https://oauth2.googleapis.com/token",
+  "auth_provider_x509_cert_url": "https://www.googleapis.com/oauth2/v1/certs",
+  "client_x509_cert_url": "https://www.googleapis.com/robot/v1/metadata/x509/firebase-adminsdk-imvdg%40project-lampros.iam.gserviceaccount.com",
+  "universe_domain": "googleapis.com"
 }
